
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2018 DEC 12a
   * in bin
     - updated sod.wrp
     - updated sedov.wrp


2018 NOV 29b
   * in bin
     - modified bdrylayer.wrp
     - added bdrylayer_Cf.eqn
     - modified Cf_wall.sty


2018 NOV 29a
   * in cycle/resconv/_MUSCL+/resconv.c
     - in find_Fstar_interface(), fixed a bug related to the arguments passed to
       function find_Fstar_interface_FVS_muscl() when CDF is not defined
   * in bin
     - added noh2D_exact.soap
     - modified noh2D.wrp


2018 NOV 27a
   * in bin/noh2D.wrp
     - made adjustments
   * in cycle/resconv/_MUSCL+/resconv.c
     - added option FVSplusFilter


2018 NOV 24b
   * renamed cycle/resconv/_FVS+Filter to cycle/resconv/_FVS+
   * in cycle/share/res_share.c
     - in filter_Fstar_interface_positivity_preserving_MultiD(), changed initialization of
       Vp0 and Vp1 such that the distribution is symmetric
     - in filter_Fstar_interface_positivity_preserving(), changed initialization of
       Vp0 and Vp1 such that the distribution is symmetric


2018 NOV 24a
   * in bin
     - updated noh2D.wrp, sedov.wrp, riemann.wrp, wavywall.wrp
   * renamed cycle/resconv/_FVS+ to cycle/resconv/_FVSTVD+
   * added cycle/resconv/_FVS+Filter/


2018 NOV 23a
   * in bin
     - updated noh2D.wrp
   * renamed
     - FLUX_FDSplusMultiD -> FLUX_FDSplusFilterMultiD
     - convert_Fstar_interface -> filter_Fstar_interface
   * in cycle/resconv/_MUSCL+/resconv.c
     - added FLUX_FDSplusFilter
   * in cycle/share/res_share.c
     - renamed filter_Fstar_interface_positivity_preserving -> filter_Fstar_interface_positivity_preserving_MultiD
     - added filter_Fstar_interface_positivity_preserving based on L matrix (instead of M) to filter
       the flux


2018 NOV 19a
   * in cycle/resconv/_MUSCL+/resconv.c