@@ -54,7 +54,7 @@
 
 }
 
-CONVERGENCEHISTORY=TRUE; 
+CONVERGENCEHISTORY=FALSE; 
 
 {
 gamma= 5/3
